test/tests/errors/error-array-access-non-array.sm
// true
// false
// false
/**/
/**/

program {
    var x: int = 1;
    x[1] = 1;
}